--- a/templates/todo.html
+++ b/templates/todo.html
@@ -3,7 +3,7 @@
 {% endfor %}
 <form>
     <div class="grid">
-        <input type="text" name="task" placeholder="Task" required="">
+        <input type="text" name="task" placeholder="Task">
         <button type="submit" hx-post="todo">Add</button>
     </div>
 </form>
