--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>To Do</title>
+    <title>App</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico">
     <script src="https://unpkg.com/htmx.org"></script>
 </head>
 <body>
-<main class="container" hx-get="todo" hx-target="this" hx-trigger="load"></main>
+    <main class="container" hx-get="todo" hx-target="this" hx-trigger="load"></main>
 </body>
 </html>
