--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,6 @@
     <script src="https://unpkg.com/htmx.org"></script>
 </head>
 <body>
-    <main class="container" hx-get="todo" hx-target="this" hx-trigger="load"></main>
+    <main class="container" hx-get="register" hx-target="this" hx-trigger="load"></main>
 </body>
 </html>
