Freeze frontend to major versions

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>App</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico">
-    <script src="https://unpkg.com/htmx.org"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.jade.min.css">
 </head>
 <body>
     <main class="container" hx-get="register" hx-target="this" hx-trigger="load"></main>
+    <script src="https://unpkg.com/htmx.org@2/dist/htmx.min.js"></script>
 </body>
 </html>
