Freeze requirements, introduce validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,4 +2,10 @@
     <header>App</header>
 </section>
 
+{% for error in errors %}
+    <section>
+        <mark>{{ error }}</mark>
+    </section>
+{% endfor %}
+
 {% block content %}{% endblock %}
